Tue Sep  3 08:20:46 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac-tbl.rb: update conversion table to recent OS X.
	  Previous table is used on Mac OS X 10.1 or prior.
	  This table is used on 10.2 or later. [ruby-dev:47680]

Tue Sep  3 07:49:25 2013  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (NUM_STEP_SCAN_ARGS): On sencond thought, keep
	  Numeral#step backward compatible in that it raises TypeError
	  when nil is given as second argument.

	* test/ruby/test_float.rb (TestFloat#test_num2dbl): Revert.

	* test/ruby/test_numeric.rb (TestNumeric#test_step): Fix test
	  cases for the above change.

Tue Sep  3 07:39:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bytes_2comp): Define it only for little endian
	  environment.

Tue Sep  3 07:31:29 2013  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (NUM_STEP_SCAN_ARGS): Numeral#step should raise
	  TypeError if a non-numeric parameter is given.

	* test/ruby/test_float.rb (TestFloat#test_num2dbl): Allow nil as
	  step, as with the keyword argument.

	* test/ruby/test_numeric.rb (TestNumeric#test_step): Add tests for
	  nil as step or limit.

Tue Sep  3 07:28:49 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (bit_length): Add casts to fix complation error with
	  clang 3.0 -Werror,-Wshorten-64-to-32.
	  [ruby-dev:47687] reported by SASADA Koichi.

Tue Sep  3 03:17:26 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_search_super_method): use ci->argc instead of
	  ci->orig_argc. ci->argc can be changed by splat arguments.
	  [ruby-list:49575]
	  This fix should be applied to Ruby 2.0.0 seriese.

	* test/ruby/test_super.rb: add a test for above.

Mon Sep  2 23:46:29 2013  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (num_step): Default the limit argument to infinity and
	  allow it to be omitted.  Keyword arguments (by: and to:) are
	  introduced for ease of use. [Feature #8838] [ruby-dev:47662]
	  [ruby-dev:42194]

	* numeric.c (num_step): Optimize for infinite loop.
